port Java UI to Python/PySide6, remove Maven/JVM deps
- Rewrote entire app in Python 3.14 + PySide6 6.11.1 + Pillow
- analysis.py: image analysis (contrast, palette, brightness)
- main.py: dark-theme desktop UI, animated score meter, category cards
- Removed all Java sources (src/, pom.xml, mvn/, target/)
- Removed build-portable scripts, lib/, uploads/
- Standalone EXE via PyInstaller --onefile --windowed
- Fixed: header clipping, click handling, threading, paint errors